version/0.17/_sources/api/solver/_autosummary/settings/icing_child.rst.txt
:orphan:

.. _icing_child:

icing_child
===========

.. autoclass:: ansys.fluent.core.solver.settings_232.icing_child.icing_child
    :show-inheritance:

.. rubric:: Attributes

================================   ========================

Attribute                                           Summary

================================   ========================
:ref:`name <name_1>`                          'name' child.

:ref:`report_type <report_type>`       'report_type' child.

:ref:`old_props <old_props>`             'old_props' child.

================================   ========================

.. rubric:: Included in:

====================   ==================

Parent                            Summary

====================   ==================
:ref:`icing <icing>`       'icing' child.

====================   ==================

