version/0.20/_sources/api/solver/_autosummary/settings/icing_child.rst.txt
:orphan:

.. _icing_child:

icing_child
===========

.. autoclass:: ansys.fluent.core.solver.settings_241.icing_child.icing_child
    :show-inheritance:

.. rubric:: Attributes

================================   ========================

Attribute                                           Summary

================================   ========================
:ref:`name <name>`                      Name of the object.

:ref:`report_type <report_type>`       'report_type' child.

================================   ========================

.. rubric:: Methods

========================================================   ======================================

Method                                                                                    Summary

========================================================   ======================================
:ref:`create_output_parameter <create_output_parameter>`       'create_output_parameter' command.

========================================================   ======================================

.. rubric:: Included in:

======================   ==================

Parent                              Summary

======================   ==================
:ref:`icing <icing_3>`       'icing' child.

======================   ==================

